[gd_scene load_steps=2 format=3 uid="uid://b5nk4br7qdh5u"]

[ext_resource type="Script" path="res://addons/scene_translation/scene_translation.gd" id="1_tjv6g"]

[node name="SceneTranslation" type="CanvasLayer"]
layer = 128
script = ExtResource("1_tjv6g")

[node name="FadeColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="LoadingColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -140.0
offset_right = 200.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="LoadingColorRect/VBoxContainer"]
layout_mode = 2
text = "loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadingProgressBar" type="ProgressBar" parent="LoadingColorRect/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
max_value = 1.0
step = 0.0
